--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -783,6 +783,657 @@ a {
 .btn {
   transition: none;
 }
+.cid-szdcsBwCOj .navbar {
+  padding: 0.5rem 0;
+  background: #ffffff;
+  transition: none;
+  min-height: 50px;
+}
+.cid-szdcsBwCOj .navbar-fixed-top {
+  padding-top: 0;
+}
+.cid-szdcsBwCOj .navbar-collapse {
+  -ms-flex-preferred-size: auto;
+  -webkit-flex-basis: auto;
+  flex-basis: auto;
+}
+.cid-szdcsBwCOj .navbar-buttons {
+  flex-wrap: wrap;
+}
+.cid-szdcsBwCOj .dropdown-item {
+  padding: 0;
+}
+.cid-szdcsBwCOj .dropdown-menu {
+  border: 0px solid lightgray;
+  background: #ffcc2d !important;
+}
+.cid-szdcsBwCOj .menu-content-top {
+  max-width: 1200px;
+  display: none;
+  padding: 0 2rem;
+  margin: auto;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  overflow: hidden;
+  transition: min-height 0.25s ease-in-out;
+}
+.cid-szdcsBwCOj .menu-bottom {
+  margin: auto;
+  width: 100%;
+  background: #ffcc2d;
+  display: flex;
+  padding: 0 2rem;
+  position: relative;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+}
+.cid-szdcsBwCOj .navbar-dropdown.bg-color.transparent.opened {
+  background: #ffffff;
+}
+.cid-szdcsBwCOj a {
+  font-style: normal;
+}
+.cid-szdcsBwCOj .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  top: -0.2em;
+  text-decoration: none;
+}
+.cid-szdcsBwCOj .nav-item a {
+  padding: 0.5rem 0 !important;
+  margin: 0 0.5rem !important;
+}
+.cid-szdcsBwCOj .dropdown-item:before {
+  font-family: MobiriseIcons !important;
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1);
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-szdcsBwCOj .content-text {
+  margin-bottom: 0;
+}
+.cid-szdcsBwCOj .navbar-nav {
+  position: relative;
+  min-height: 49px;
+  -ms-flex-direction: row;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+}
+@media (min-width: 992px) {
+  .cid-szdcsBwCOj .navbar-nav .main-menu-animated-line {
+    position: absolute;
+    left: 0;
+    width: 0;
+    height: 0;
+    z-index: 100;
+    border-top: 4px solid #0062a3;
+    -webkit-transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
+    -moz-transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
+    transition: width 0.4s, left 0.6s cubic-bezier(0.19, 0.65, 0.02, 0.93);
+  }
+  .cid-szdcsBwCOj .navbar-nav .main-menu-animated-line.bottom {
+    bottom: 0;
+  }
+}
+.cid-szdcsBwCOj .navbar-nav .nav-item span {
+  padding-right: 0;
+}
+.cid-szdcsBwCOj .navbar-nav .nav-item a {
+  margin: 0 1.3rem !important;
+}
+.cid-szdcsBwCOj .display-4 > .mbr-iconfont {
+  font-size: 1.43em;
+}
+.cid-szdcsBwCOj .display-4 > .btn > .mbr-iconfont {
+  font-size: 1.43em;
+}
+.cid-szdcsBwCOj .nav-dropdown .dropdown-item {
+  font-weight: 400;
+}
+.cid-szdcsBwCOj .navbar-buttons.mbr-section-btn {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-szdcsBwCOj .nav-dropdown .link {
+  font-weight: 400;
+}
+.cid-szdcsBwCOj .menu .navbar-brand .logo-text-part {
+  vertical-align: top;
+}
+.cid-szdcsBwCOj .content-right-side {
+  text-align: center;
+}
+.cid-szdcsBwCOj .content-right-side .content-link {
+  margin-left: 2rem;
+}
+.cid-szdcsBwCOj .content-right-side .content-link span {
+  vertical-align: middle;
+  padding-right: 1rem;
+}
+.cid-szdcsBwCOj .widget-icon {
+  display: inline-block;
+  padding-right: 1rem;
+  font-size: 1.65rem;
+}
+.cid-szdcsBwCOj .info-widget {
+  padding-left: 2rem;
+  padding-top: 0.5rem;
+  padding-right: 3rem;
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
+}
+.cid-szdcsBwCOj .menu-content-right {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-szdcsBwCOj .menu-content-right .info-widget:last-child {
+  padding-right: 0;
+}
+.cid-szdcsBwCOj .menu-content-right .info-widget:first-child {
+  padding-left: 0;
+  border-left: none;
+}
+.cid-szdcsBwCOj .widget-content {
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+}
+.cid-szdcsBwCOj .widget-content .widget-title {
+  font-weight: 600;
+  margin-bottom: 7px;
+}
+.cid-szdcsBwCOj .widget-content .widget-text {
+  margin-bottom: 0;
+}
+@media (min-width: 992px) {
+  .cid-szdcsBwCOj .navbar .menu-content-top {
+    display: flex;
+    min-height: 83px;
+    height: 100%;
+  }
+  .cid-szdcsBwCOj .content-right-side {
+    text-align: right;
+    -webkit-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-szdcsBwCOj .menu-content-top {
+    border-bottom: 0px solid rgba(0, 0, 0, 0.12);
+  }
+  .cid-szdcsBwCOj .navbar {
+    display: block;
+    padding: 0;
+  }
+  .cid-szdcsBwCOj .navbar .menu-logo {
+    margin-right: auto;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .cid-szdcsBwCOj .navbar:not(.navbar-short) .navbar-collapse {
+    max-height: calc(100vh - 4rem - 4.5rem);
+  }
+  .cid-szdcsBwCOj .navbar.navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+    -webkit-align-self: initial;
+    align-self: auto;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    z-index: 101;
+    min-height: 49px;
+  }
+  .cid-szdcsBwCOj .dropdown-item:hover:before {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+    width: 16px;
+  }
+  .cid-szdcsBwCOj .navbar-toggler {
+    display: none;
+  }
+  .cid-szdcsBwCOj .navbar-collapse {
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
+  }
+}
+.cid-szdcsBwCOj .navbar-short .menu-content-top {
+  height: 0;
+  min-height: 0;
+  border: none;
+}
+.cid-szdcsBwCOj .btn {
+  display: inline-flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-szdcsBwCOj .btn .mbr-iconfont {
+  font-size: 1.2em;
+}
+.cid-szdcsBwCOj .menu-logo {
+  margin-right: auto;
+}
+.cid-szdcsBwCOj .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 1.5rem;
+  padding: 0.5rem 0;
+  transition: padding 0.2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-szdcsBwCOj .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: -webkit-flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: 0.3rem 0;
+}
+.cid-szdcsBwCOj .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-szdcsBwCOj .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-szdcsBwCOj .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+  width: auto;
+}
+.cid-szdcsBwCOj .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-szdcsBwCOj .navbar-toggleable-sm .navbar-collapse {
+  width: auto;
+}
+.cid-szdcsBwCOj .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-szdcsBwCOj .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-szdcsBwCOj .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu {
+  background: #ffffff;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  text-align: left;
+}
+@media (max-width: 991px) {
+  .cid-szdcsBwCOj .dropdown .dropdown-menu {
+    overflow: hidden;
+  }
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-item::after {
+  right: -0.5rem;
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-item:hover .mbr-iconfont:before {
+  -webkit-transform: scale(0, 1);
+  transform: scale(0, 1);
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-left: -1.8rem;
+  padding-right: 1rem;
+  font-size: inherit;
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  -webkit-transform: scale(1, 1);
+  transform: scale(1, 1);
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-szdcsBwCOj .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-szdcsBwCOj .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  -webkit-transform: translateY(100%);
+  transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-szdcsBwCOj .navbar.navbar-short {
+  min-height: 50px;
+  transition: all 0.2s;
+}
+.cid-szdcsBwCOj .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-szdcsBwCOj .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-szdcsBwCOj .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+  width: auto;
+}
+.cid-szdcsBwCOj .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-szdcsBwCOj button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all 0.2s;
+  margin: 1rem 0.8rem;
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-szdcsBwCOj button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-szdcsBwCOj button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-szdcsBwCOj button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-szdcsBwCOj button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-szdcsBwCOj button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-szdcsBwCOj button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-szdcsBwCOj nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-szdcsBwCOj nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-szdcsBwCOj nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-szdcsBwCOj nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-szdcsBwCOj .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-szdcsBwCOj .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-szdcsBwCOj .collapsed .btn {
+  display: flex;
+}
+.cid-szdcsBwCOj .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-szdcsBwCOj .collapsed .navbar-collapse.collapsing,
+.cid-szdcsBwCOj .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-szdcsBwCOj .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-szdcsBwCOj .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-szdcsBwCOj .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-szdcsBwCOj .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-szdcsBwCOj .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-szdcsBwCOj .collapsed .navbar-collapse.show .navbar-buttons {
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  text-align: center;
+}
+.cid-szdcsBwCOj .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-szdcsBwCOj .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-szdcsBwCOj .collapsed .dropdown .dropdown-menu {
+    overflow: hidden;
+  }
+}
+.cid-szdcsBwCOj .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-szdcsBwCOj .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+  margin-top: 0.5rem;
+}
+.cid-szdcsBwCOj .collapsed .navbar-toggleable-sm {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+.cid-szdcsBwCOj .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: 0.5s;
+  transition-property: opacity, padding, height;
+}
+.cid-szdcsBwCOj .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-szdcsBwCOj .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-szdcsBwCOj .collapsed .dropdown .dropdown-toggle[data-toggle='dropdown-submenu']::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 0.3em;
+  vertical-align: middle;
+  content: '';
+  border-top: 0.3em solid;
+  border-right: 0.3em solid transparent;
+  border-left: 0.3em solid transparent;
+}
+.cid-szdcsBwCOj .collapsed .menu-bottom {
+  -webkit-flex-direction: column-reverse;
+  flex-direction: column-reverse;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+@media (max-width: 991px) {
+  .cid-szdcsBwCOj .navbar-collapse {
+    padding-bottom: 1rem;
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-szdcsBwCOj .navbar-collapse.collapsing,
+  .cid-szdcsBwCOj .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-szdcsBwCOj .navbar-collapse.collapsing .navbar-nav,
+  .cid-szdcsBwCOj .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-szdcsBwCOj .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-szdcsBwCOj .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-szdcsBwCOj .navbar-collapse.collapsing .navbar-buttons,
+  .cid-szdcsBwCOj .navbar-collapse.show .navbar-buttons {
+    display: flex;
+    -webkit-justify-content: center;
+    justify-content: center;
+    text-align: center;
+  }
+  .cid-szdcsBwCOj .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-szdcsBwCOj .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-szdcsBwCOj .menu-bottom {
+    -webkit-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+  .cid-szdcsBwCOj img {
+    height: 3.8rem !important;
+  }
+  .cid-szdcsBwCOj .btn {
+    display: flex;
+  }
+  .cid-szdcsBwCOj button.navbar-toggler {
+    display: block;
+  }
+  .cid-szdcsBwCOj .navbar-brand {
+    margin-left: 1rem !important;
+    margin-top: 0.5rem;
+  }
+  .cid-szdcsBwCOj .navbar-toggleable-sm {
+    -webkit-flex-direction: column;
+    flex-direction: column;
+  }
+  .cid-szdcsBwCOj .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: 0.5s;
+    transition-property: opacity, padding, height;
+  }
+  .cid-szdcsBwCOj .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-szdcsBwCOj .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-szdcsBwCOj .dropdown .dropdown-toggle[data-toggle='dropdown-submenu']::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: 0.3em;
+    vertical-align: middle;
+    content: '';
+    border-top: 0.3em solid;
+    border-right: 0.3em solid transparent;
+    border-left: 0.3em solid transparent;
+  }
+  .cid-szdcsBwCOj .navbar-buttons.mbr-section-btn {
+    width: 100%;
+  }
+  .cid-szdcsBwCOj .dropdown .dropdown-menu .dropdown-item {
+    padding: 0.235em 1.5em 0.235em 1.5em !important;
+    transition: none;
+    margin: 0 !important;
+  }
+}
+.cid-szdcsBwCOj .navbar-dropdown {
+  -webkit-flex-wrap: nowrap;
+  flex-wrap: nowrap;
+}
+.cid-szdcsBwCOj .nav-link:focus {
+  outline: none;
+}
+.cid-szdcsBwCOj .navbar-toggler {
+  position: relative;
+}
+.cid-szdcsBwCOj .dropdown-item.active,
+.cid-szdcsBwCOj .dropdown-item:active {
+  background: #ffcc2d;
+  color: initial;
+}
 .cid-symnWbZblc {
   background-image: url("../../../assets/images/mbr-1920x1279.jpg");
   background-position: right;
