--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1626,6 +1626,22 @@ a {
 .cid-symoMzD42U .card:hover .card-wrapper .mbr-section-text {
   color: #ffffff !important;
 }
+.cid-szdxsBKqtx {
+  background: #000000;
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+.cid-szdxsBKqtx .image-block {
+  margin: auto;
+}
+.cid-szdxsBKqtx .image-block img {
+  width: 100%;
+}
+@media (max-width: 767px) {
+  .cid-szdxsBKqtx .image-block {
+    width: 100% !important;
+  }
+}
 .cid-syUOuBirHw {
   padding-top: 75px;
   padding-bottom: 75px;
@@ -1870,4 +1886,130 @@ a {
 .cid-szcqXiVI3n .mbr-text,
 .cid-szcqXiVI3n .mbr-section-btn {
   color: #999999;
+}
+.cid-szdwynAIou {
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color: #000000;
+}
+.cid-szdwynAIou .mbr-section-subtitle {
+  letter-spacing: 1px;
+  margin-bottom: 1.5rem;
+  color: #cccccc;
+}
+.cid-szdwynAIou .first-column .mbr-text {
+  margin: 0;
+}
+.cid-szdwynAIou .icons-wrapper ul {
+  margin: 0;
+  padding: 0;
+}
+.cid-szdwynAIou .icons-wrapper ul li {
+  margin-right: 1.25rem;
+  display: inline-block;
+}
+.cid-szdwynAIou .icons-wrapper ul li .mbr-iconfont {
+  color: #ffffff;
+  font-size: 1.5rem;
+}
+.cid-szdwynAIou .icons-wrapper ul li .mbr-iconfont:hover {
+  color: #ffcc2d;
+}
+.cid-szdwynAIou .form-group {
+  max-width: 55%;
+}
+.cid-szdwynAIou .form-group,
+.cid-szdwynAIou .mbr-section-btn {
+  margin: 0;
+  padding: 0;
+  display: -webkit-flex;
+}
+.cid-szdwynAIou .form-control {
+  font-size: .9rem;
+  border: none;
+  border-radius: 0;
+  width: 100%;
+  padding: .3rem .5rem;
+  background: #000000;
+  color: #d8d7d7;
+}
+.cid-szdwynAIou .form-control::-webkit-input-placeholder {
+  color: #d8d7d7;
+}
+.cid-szdwynAIou .form-control::-moz-placeholder {
+  color: #d8d7d7;
+}
+.cid-szdwynAIou .form-control:-moz-placeholder {
+  color: #d8d7d7;
+}
+.cid-szdwynAIou .form-control:-ms-input-placeholder {
+  color: #d8d7d7;
+}
+.cid-szdwynAIou .col + .mbr-section-btn .btn,
+.cid-szdwynAIou .col-auto + .mbr-section-btn .btn {
+  margin: 0 !important;
+  height: 100%;
+  border-radius: 0px !important;
+  padding: 0 2.2rem !important;
+}
+.cid-szdwynAIou .dragArea > *:nth-last-child(2).col,
+.cid-szdwynAIou .dragArea > *:nth-last-child(2).col-auto,
+.cid-szdwynAIou .col + .mbr-section-btn,
+.cid-szdwynAIou .col-auto + .mbr-section-btn {
+  padding-left: 0;
+  padding-right: 0;
+  margin: 0;
+}
+@media (max-width: 991px) {
+  .cid-szdwynAIou .first-column,
+  .cid-szdwynAIou .second-column {
+    padding-bottom: 2rem;
+  }
+  .cid-szdwynAIou .mbr-form .row {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-szdwynAIou .first-column,
+  .cid-szdwynAIou .second-column,
+  .cid-szdwynAIou .third-column {
+    text-align: center;
+  }
+}
+.cid-szdySfaJcu {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #000000;
+}
+.cid-szdySfaJcu .first-column {
+  display: inline-flex;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-szdySfaJcu .second-column img {
+  object-fit: cover;
+  object-position: center center;
+  width: 30%;
+}
+.cid-szdySfaJcu .mbr-list {
+  margin: 0;
+}
+.cid-szdySfaJcu .mbr-list li:not(:last-child) {
+  margin-right: 2.5rem;
+}
+@media (max-width: 991px) {
+  .cid-szdySfaJcu .first-column {
+    -webkit-justify-content: center;
+    justify-content: center;
+    padding-top: 1rem;
+  }
+  .cid-szdySfaJcu .second-column {
+    text-align: center;
+  }
+}
+@media (max-width: 767px) {
+  .cid-szdySfaJcu .mbr-list li:not(:last-child) {
+    margin-right: 1rem;
+  }
 }
