create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -3902,6 +3902,79 @@ a {
 .cid-szLVAJwRjG .mbr-section-title {
   color: #ffffff;
 }
+.cid-szRAm1NTm0 {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #111111;
+}
+.cid-szRAm1NTm0 img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.cid-szRAm1NTm0 .container-fluid {
+  padding: 0;
+}
+.cid-szRAm1NTm0 .card-wrapper {
+  background: #191919;
+  padding: 3rem;
+}
+.cid-szRAm1NTm0 .card-wrapper:hover {
+  background: linear-gradient(to left, #0062a3, #0062a3);
+}
+.cid-szRAm1NTm0 .text-wrap {
+  display: flex;
+  justify-content: center;
+  padding-top: 1rem;
+}
+.cid-szRAm1NTm0 .icon-wrapper {
+  padding: 0 0.6rem;
+}
+.cid-szRAm1NTm0 .card-box {
+  padding-top: 2rem;
+}
+.cid-szRAm1NTm0 .link-icon {
+  font-size: 1.5rem;
+  background: linear-gradient(to left, #0062a3, #0062a3);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.cid-szRAm1NTm0 .card-title {
+  color: #999999;
+}
+.cid-szRAm1NTm0 .mbr-subtitle {
+  color: #ffffff;
+}
+.cid-szRAm1NTm0 .main-title {
+  color: #ffffff;
+}
+.cid-szRAm1NTm0 .main-subtitle {
+  color: #999999;
+}
+.cid-szRAm1NTm0 .card {
+  margin-bottom: 2rem;
+  transition: all 0.3s;
+}
+.cid-szRAm1NTm0 .card:hover {
+  transform: translateY(-10px);
+}
+.cid-szRAm1NTm0 .card:hover .link-icon {
+  color: #ffffff;
+  -webkit-background-clip: transparent;
+  -webkit-text-fill-color: unset;
+}
+.cid-szRAm1NTm0 .card:hover .card-title,
+.cid-szRAm1NTm0 .card:hover .mbr-subtitle {
+  color: #ffffff !important;
+}
+@media (max-width: 1600px) {
+  .cid-szRAm1NTm0 .card-wrapper {
+    padding: 3rem 1rem;
+  }
+}
 .cid-szLTMf5iO3 {
   padding-top: 45px;
   padding-bottom: 45px;
