--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2965,6 +2965,100 @@ a {
 .cid-szLFOlZQVc .mbr-section-text {
   color: #999999;
 }
+.cid-szRFM0nBbg {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-szRFM0nBbg .row-main {
+  -webkit-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+.cid-szRFM0nBbg .card {
+  -webkit-align-items: center;
+  align-items: center;
+  display: flex;
+  -webkit-flex-direction: row;
+  flex-direction: row;
+  padding-bottom: 0.5rem;
+}
+.cid-szRFM0nBbg .container-fluid {
+  padding: 0;
+  overflow: hidden;
+}
+.cid-szRFM0nBbg .img {
+  margin: auto;
+}
+.cid-szRFM0nBbg .card-box {
+  width: 100%;
+}
+.cid-szRFM0nBbg p {
+  line-height: 1.5;
+  margin: 0;
+}
+.cid-szRFM0nBbg .box {
+  padding: 3rem 13rem;
+  margin: auto;
+}
+.cid-szRFM0nBbg .card-img {
+  padding: 0rem;
+  border-radius: 100%;
+  height: 120px;
+  width: 120px;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  display: flex;
+}
+.cid-szRFM0nBbg .card-img span {
+  color: #0081d7;
+  font-size: 3.6rem;
+}
+.cid-szRFM0nBbg img {
+  width: 100%;
+}
+.cid-szRFM0nBbg .mbr-text {
+  color: #767676;
+}
+@media (max-width: 1500px) {
+  .cid-szRFM0nBbg .box {
+    padding: 3rem 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-szRFM0nBbg .box {
+    padding: 2rem 6rem;
+  }
+}
+@media (max-width: 576px) {
+  .cid-szRFM0nBbg .box {
+    padding: 2rem 3rem;
+  }
+}
+.cid-szRFM0nBbg .card-title,
+.cid-szRFM0nBbg .card-img {
+  color: #ffcc2d;
+  text-align: left;
+}
+.cid-szRFM0nBbg .mbr-section-title {
+  text-align: center;
+}
+.cid-szRFM0nBbg .mbr-section-sub-title {
+  text-align: center;
+  color: #f3f3f3;
+}
+.cid-szRFM0nBbg .mbr-section-title,
+.cid-szRFM0nBbg .line-wrap {
+  text-align: center;
+  width: 100%;
+  color: #ffffff;
+}
+.cid-szRFM0nBbg .mbr-text,
+.cid-szRFM0nBbg .line-wrap2 {
+  text-align: left;
+  color: #ffffff;
+}
 .cid-szLFOo1jUL {
   padding-top: 45px;
   padding-bottom: 45px;
